<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="40dp">
    <TextView
        android:id="@+id/recycle_item_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#cccccc"
        />
</LinearLayout>