<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <com.views.ui.customviewgroup.LoadLayout
        android:id="@+id/item_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.views.ui.customview.dialog.LoadingProcess
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="top|center_horizontal"
            android:contentDescription="header"
            />
        <com.views.ui.customview.dialog.LoadingProcess
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom|center_horizontal"
            android:contentDescription="footer"
            />
    </com.views.ui.customviewgroup.LoadLayout>
</RelativeLayout>